# xpolynomial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
examples/: CMakeLists.txt  chebyshev_1st.cpp  euclidean.cpp  evaluate.cpp  example1.cpp  example2.cpp  nth_roots_of_unity.cpp  parser.cpp  square_free.cpp  sturm_sequence.cpp
include/: chebyshev_polynomial.h  chebyshev_polynomial.tpp  complex_polynomial.h  complex_polynomial.tpp  complex_polynomial_root_finder.h  complex_polynomial_root_finder.tpp  euclidean_algorithm.h  euclidean_algorithm.tpp  gauss_legendre.h  gauss_legendre.tpp  interval.h  legendre_polynomial.h  legendre_polynomial.tpp  matrix.h  matrix.tpp  polynomial.h  polynomial.ostream.tpp  polynomial.tpp  polynomial_interpolation.h  polynomial_interpolation.tpp  polynomial_parser.h  real_interval.h  real_polynomial_root_finder.h  real_polynomial_root_finder.tpp  root_finder.h  root_finder.tpp  square_free_decomposition.h  square_free_decomposition.tpp  utils.h
samples/: CMakeLists.txt  chebyshev_1st.cpp  cubic_roots.cpp  euclidean.cpp  evaluate.cpp  interpolation.cpp  nth_roots_of_unity.cpp  parser.cpp  quadratic_roots.cpp  root_finder.cpp  square_free.cpp  sturm_sequence.cpp
src/: CMakeLists.txt  main.cpp  main.h
test/: CMakeLists.txt  chebyshev_polynomial_tests.cpp  complex_polynomial_root_finder_tests.cpp  complex_polynomial_tests.cpp  euclidean_algorithm_tests.cpp  interval_tests.cpp  legendre_polynomial_tests.cpp  matrix_tests.cpp  polynomial_interpolation_tests.cpp  polynomial_parser_tests.cpp  polynomial_tests.cpp  real_interval_tests.cpp  real_polynomial_root_finder_test.cpp  real_polynomial_root_finder_tests.cpp  root_finder_test.cpp  root_finder_tests.cpp  square_free_decomposition_test.cpp  square_free_decomposition_tests.cpp  test_main.cpp  test_utilities.h  utils_test.cpp
tests/: CMakeLists.txt  legendre_polynomial_tests.cpp
